# factorio-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  deploy-docs.yml
crates/cargo-factorio/: Cargo.toml
crates/cargo-factorio/src/: build.rs  cargo_manifest.rs  cli.rs  config.rs  error.rs  init.rs  install.rs  main.rs  manifest.rs  package.rs
crates/cargo-factorio/tests/: build_integration.rs  cli.rs
crates/factorio/: Cargo.toml
crates/factorio-api/: Cargo.toml
crates/factorio-api-gen/: Cargo.toml
crates/factorio-api-gen/api/: runtime-api.json
crates/factorio-api-gen/src/: lib.rs  schema.rs
crates/factorio-api-gen/src/generate/: classes.rs  concepts.rs  debug_types.rs  event_filters.rs  identifications.rs  mod.rs  prototypes.rs  types.rs  unions.rs
crates/factorio-api-gen/tests/: generate.rs  prototypes.rs
crates/factorio-api/src/: .gitignore  lib.rs  lua_libs.rs  prototypes.rs  settings.rs
crates/factorio-codegen/: Cargo.toml  build.rs
crates/factorio-codegen/src/: generator.rs  lib.rs  pack.rs
crates/factorio-codegen/src/generator/: error.rs  expression.rs  function.rs  statement.rs  table.rs
crates/factorio-codegen/src/generator/expression/: calls.rs  closure.rs  enums.rs  if_expr.rs  reciever.rs  tables.rs  trim.rs
crates/factorio-codegen/src/pack/: events.rs  exports.rs
crates/factorio-codegen/tests/: associated_paths.rs  collections.rs  continue_labels.rs  control_flow.rs  debug.rs  enums.rs  errors.rs  expressions.rs  imports.rs  ir_variants.rs  method_dispatch.rs  method_syntax.rs  module_generation.rs  precedence.rs  print.rs  proptest_emit.rs  recipe_type.rs  structs.rs  trailing_nil.rs  traits.rs
crates/factorio-codegen/tests/common/: mod.rs
crates/factorio-codegen/tests/snapshots/: imports__generates_require_statements.snap  method_syntax__method_with_self_using_colon_syntax.snap  module_generation__module_with_private_helper_and_exported_handler.snap  module_generation__omits_unreachable_private_helper_when_pruned.snap  structs__struct_as_table_with_methods.snap
crates/factorio-frontend/: Cargo.toml
crates/factorio-frontend/src/: discovery.rs  error.rs  lib.rs  lower.rs  paths.rs  report.rs
crates/factorio-frontend/src/lower/: assembling_machines.rs  assert_macros.rs  attrs.rs  benches.rs  context.rs  event_filter.rs  event_handler.rs  expressions.rs  extra_protos.rs  fluids.rs  functions.rs  imports.rs  items.rs  iterators.rs  locale.rs  metadata.rs  mod.rs  mod_settings.rs  print.rs  proto_macros.rs  recipes.rs  serde_json.rs  statements.rs  structs.rs  technologies.rs  tests.rs  traits.rs  types.rs  util.rs
crates/factorio-frontend/tests/: assert_macros.rs  benches.rs  collections.rs  control_flow.rs  doc_comments.rs  enums.rs  expressions.rs  functions.rs  imports.rs  lints.rs  locale.rs  locale_cross_module.rs  lua_macro.rs  matches_macro.rs  module.rs  nested_modules.rs  perf_emit_smoke.rs  print.rs  proto_macros_extra.rs  recipe_macro.rs  result.rs  structs.rs  submodules.rs  traits.rs  traits_cross_module.rs  type_aliases.rs
crates/factorio-ir/: Cargo.toml
crates/factorio-ir/src/: expression.rs  function.rs  ir_expression.rs  ir_function.rs  ir_literal.rs  ir_operator.rs  ir_statement.rs  ir_type.rs  lib.rs  lint.rs  locale.rs  module.rs  scope.rs  span.rs  stage.rs  statement.rs
crates/factorio-ir/src/ast/: statement.rs
crates/factorio-ir/src/opt/: concat.rs  inline.rs  mod.rs  peephole.rs  simplify.rs  tests.rs
crates/factorio-ir/src/opt/hoist/: expand.rs  expr.rs  extract.rs  mod.rs
crates/factorio-ir/src/opt/simplify/: bool_fold.rs  cleanup.rs  mod.rs  unwrap_or.rs
crates/factorio-ir/src/opt/simplify/temps/: analysis.rs  mod.rs  rewrite.rs
crates/factorio-ir/src/prune/: apply.rs  items.rs  mod.rs  module_graph.rs  reachability.rs  references.rs  struct_utils.rs
crates/factorio-ir/src/prune/references/: mod.rs  resolve.rs  walk.rs
crates/factorio-macros/: Cargo.toml
crates/factorio-macros/src/: lib.rs  proto_common.rs  proto_macros.rs
crates/factorio-macros/src/macros/: bench.rs  lua.rs  mod.rs
crates/factorio-playground/: Cargo.toml
crates/factorio-playground/src/: lib.rs
crates/factorio-playground/tests/: examples_smoke.rs
crates/factorio-rs/: Cargo.toml
crates/factorio-rs-cli/: Cargo.toml
crates/factorio-rs-cli/src/: add.rs  api_crate.rs  assets.rs  build.rs  cargo_manifest.rs  cli.rs  commands.rs  config.rs  error.rs  init.rs  install.rs  main.rs  manifest.rs  open.rs  package.rs  paths.rs  progress.rs  status.rs  typecheck.rs  write_if_changed.rs
crates/factorio-rs-cli/src/commands/: add.rs  bench.rs  build.rs  deploy.rs  expand.rs  hot_reload.rs  init.rs  install.rs  package.rs  sync.rs  test.rs  typecheck.rs
crates/factorio-rs-cli/src/config/: emit.rs  lints.rs  profile.rs
crates/factorio-rs-cli/tests/: build_integration.rs  cli.rs
crates/factorio-rs/src/: event.rs  lib.rs  test.rs
crates/factorio/src/: lib.rs
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/public/: robots.txt
docs/src/: projects.ts  routeData.ts
docs/src/components/: Footer.astro  PageTitle.astro  SocialIcons.astro
docs/src/sidebars/: core.mjs  gui.mjs
docs/src/styles/: custom.css
ecosystem/: Cargo.toml
ecosystem/factorio-rs-gui/: Factorio.toml  README.md
examples/benchmarking/: Cargo.toml  Factorio.toml
examples/benchmarking/src/: control.rs
examples/consumer/: Cargo.toml  Factorio.toml
examples/gui_basics/src/: lib.rs
examples/gui_counter/src/: lib.rs
examples/hello_world/: Cargo.toml  Factorio.toml
examples/hello_world/src/: lib.rs  on_init.rs  player.rs
examples/locale_test/: Cargo.toml
examples/locale_test/src/: lib.rs
examples/mandatory_spaghetti/: .gitignore  Cargo.toml  Factorio.toml  bacon.toml
examples/mandatory_spaghetti/src/: control.rs
examples/provider/: .gitignore  Cargo.toml
examples/provider/src/: factorio_exports.rs  lib.rs
examples/tracing_test/: Cargo.toml
examples/traits_demo/: .gitignore  Cargo.toml  Factorio.toml
scripts/: build-playground-wasm.sh  publish.sh
(+65 files in other folders)
