[workspace]
resolver = "3"
members = [
    "crates/factorio-rs-cli",
    "crates/factorio-rs",
    "crates/factorio-macros",
    "crates/factorio-api",
    "crates/factorio-api-gen",
    "crates/factorio-codegen",
    "crates/factorio-frontend",
    "crates/factorio-ir",
    "crates/factorio-playground",
    "examples/hello_world",
    "examples/benchmarking",
    "examples/gui_basics",
    "examples/gui_counter",
    "examples/gui_widgets",
    "examples/locale_test",
    "examples/mandatory_spaghetti",
    "examples/tracing_test",
    "examples/traits_demo",
    "examples/provider",
    "examples/consumer",
]

[profile.release.package.factorio-playground]
opt-level = "z"

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/languint/factorio-rs"
homepage = "https://factorio-rs.dev/"
documentation = "https://factorio-rs.dev/"
readme = "README.md"
keywords = ["factorio", "lua", "modding", "gamedev", "transpile"]
categories = ["game-development"]

[workspace.dependencies]
factorio-rs = { version = "0.4.0", path = "./crates/factorio-rs" }
factorio-api = { version = "0.4.0", path = "./crates/factorio-api" }
factorio-api-gen = { version = "0.4.0", path = "./crates/factorio-api-gen" }
factorio-macros = { version = "0.4.0", path = "./crates/factorio-macros" }
factorio-codegen = { version = "0.4.0", path = "./crates/factorio-codegen" }
factorio-frontend = { version = "0.4.0", path = "./crates/factorio-frontend" }
factorio-ir = { version = "0.4.0", path = "./crates/factorio-ir" }

serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "0.9.11"
ariadne = "0.5.1"
yansi = "1.0.1"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
unimplemented = "deny"
todo = "deny"
panic_in_result_fn = "deny"
panic = "deny"
exit = "deny"
as_conversions = "deny"
