[package]
name = "cargo-factorio"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "cargo-factorio"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
factorio-codegen.workspace = true
factorio-frontend.workspace = true
factorio-ir.workspace = true
heck = "0.5.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.149"
thiserror.workspace = true
toml.workspace = true
walkdir = "2.5.0"
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.25.0"

[lints]
workspace = true
