[package]
name = "factorio-api-gen"
version = "0.1.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["game-development", "development-tools", "api-bindings"]
description = "Generates Rust Factorio API bindings from runtime-api.json for factorio-rs"
include = [
    "src/**/*",
    "tests/**/*",
    "api/runtime-api.json",
    "Cargo.toml",
]

[dependencies]
convert_case = "0.8.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
serde = { workspace = true }
serde_json = "1.0.145"

[[bin]]
name = "factorio-api-gen"
path = "src/main.rs"

[lints]
workspace = true
