[package]
name = "factorio-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Generated Factorio runtime API bindings for factorio-rs"

[dependencies]

[build-dependencies]
factorio-api-gen = { workspace = true }

[lints]
workspace = true
