[package]
name = "factorio-api"
version = "0.1.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["game-development", "api-bindings"]
description = "Generated Factorio runtime API type stubs for factorio-rs mods"

[dependencies]

[build-dependencies]
factorio-api-gen = { workspace = true }

[lints]
workspace = true
