[package]
name = "factorio-codegen"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Lua code generator for factorio-rs"

[dependencies]
factorio-ir.workspace = true

thiserror.workspace = true
heck = "0.5.0"

[lints]
workspace = true

[dev-dependencies]
factorio-ir.workspace = true
