[package]
name = "factorio-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["game-development", "compilers", "development-tools"]
description = "Lua code generator for the factorio-rs Rust-to-Lua Factorio mod toolchain"

[dependencies]
factorio-ir.workspace = true

thiserror.workspace = true
heck = "0.5.0"

[lints]
workspace = true

[dev-dependencies]
factorio-ir.workspace = true
