[package]
name = "factorio-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["game-development", "compilers", "development-tools"]
description = "Lua code generator for the factorio-rs Rust-to-Lua Factorio mod toolchain"

[dependencies]
factorio-ir.workspace = true

thiserror.workspace = true
heck = "0.5.0"
serde_json = "1.0.149"

[build-dependencies]
factorio-api-gen = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
factorio-ir.workspace = true
full_moon = { version = "2.2.0", default-features = false, features = ["lua52"] }
insta = "1.48.0"
proptest = "1.11.0"
mlua = { version = "0.11", features = ["lua52", "vendored"] }
