[package]
name = "factorio-frontend"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Rust frontend that lowers Factorio mod sources into factorio-ir"

[features]
default = []
tracing = []
serde = []

[dependencies]
factorio-api.workspace = true
factorio-ir.workspace = true

syn = { version = "2.0.114", features = ["full"] }
proc-macro2 = "1.0.106"
thiserror.workspace = true
quote = "1.0.46"

[dev-dependencies]
factorio-codegen = { workspace = true }

[lints]
workspace = true
