[package]
name = "factorio-frontend"
version = "0.1.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["game-development", "compilers", "parser-implementations"]
description = "Rust frontend that parses Factorio mod sources and lowers them to factorio-ir"

[features]
default = []
tracing = []
serde = []

[dependencies]
factorio-api.workspace = true
factorio-ir.workspace = true

syn = { version = "2.0.114", features = ["full"] }
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
thiserror.workspace = true
quote = "1.0.46"
ariadne.workspace = true
yansi.workspace = true

[dev-dependencies]
factorio-codegen = { workspace = true }

[lints]
workspace = true
