[package]
name = "factorio-ir"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Intermediate representation for factorio-rs Rust-to-Lua transpilation"

[dependencies]
serde.workspace = true

[lints]
workspace = true
