[package]
name = "factorio-ir"
version = "0.1.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["game-development", "compilers", "data-structures"]
description = "Intermediate representation for factorio-rs Rust-to-Lua Factorio mod transpilation"

[dependencies]
serde.workspace = true

[lints]
workspace = true
