[package]
name = "factorio-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Proc macros for factorio-rs mods"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.114", features = ["full"] }

[lints]
workspace = true
