[package]
name = "factorio-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Proc macros for factorio-rs mods"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.114", features = ["full"] }

[build-dependencies]
factorio-api-gen = { workspace = true }

[lints]
workspace = true
