[package]
name = "factorio-macros"
version = "0.1.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["game-development", "development-tools"]
description = "Proc macros for Factorio mod events, settings, and locale in factorio-rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.114", features = ["full"] }

[build-dependencies]
factorio-api-gen = { workspace = true }

[lints]
workspace = true
