[package]
name = "factorio-rs-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "game-development", "development-tools"]
description = "CLI to init, build, and open Factorio mods written in Rust (Rust-to-Lua transpile)"

[[bin]]
name = "factorio-rs"
path = "src/main.rs"

[features]
default = ["tracing", "serde"]
tracing = ["factorio-frontend/tracing"]
serde = ["factorio-frontend/serde"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
factorio-codegen.workspace = true
factorio-frontend.workspace = true
factorio-ir.workspace = true
heck = "0.5.0"
indicatif = "0.18.6"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.149"
thiserror.workspace = true
toml.workspace = true
toml_edit = "0.25.12"
walkdir = "2.5.0"
yansi.workspace = true
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.25.0"

[lints]
workspace = true
