[package]
name = "factorio-rs"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Rust SDK for Factorio modding"

[features]
default = []
tracing = ["dep:tracing"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
factorio-api = { workspace = true }
factorio-macros = { workspace = true }
tracing = { version = "0.1", optional = true, default-features = false }
serde = { workspace = true, optional = true }
serde_json = { version = "1.0", optional = true }

[lints]
workspace = true
