[package]
name = "provider"
version.workspace = true
edition = "2024"
publish = false

[package.metadata]

[package.metadata.factorio]
mod_name = "provider"
dependencies = ["provider >= 0.1.9"]
module_root = "lua"
interface = "provider"
remote_fns = ["greet"]

[lib]
path = "src/lib.rs"

[dependencies]
factorio-rs = { path = "../../crates/factorio-rs" }
